# sedlying

./: LICENSE.txt  README.md  dune-project  index.html  sedlying.opam
sedlying/: index.html
sedlying/Sedlying/: index.html
sedlying/Sedlying/Sedlexing/: index.html
sedlying/Sedlying/Sedlexing/Code_point/: index.html
sedlying/Sedlying/Sedlexing/Utf_8/: index.html
sedlying/Sedlying__Sedlexing/: index.html
sedlying/Sedlying__Sedlexing/Code_point/: index.html
sedlying/Sedlying__Sedlexing/Utf_8/: index.html
src/: dune  sedlexing.ml  sedlexing.mli
test/: dune  test.ml
